@@ -1,6 +1,10 @@
 2008-8-15 Patrick Galbraith <patg@patg.net> (4.008)
-* Multi statement patch, thank you Chris Heath!
+* Multi statement patch, thanks to Chris Heath!
 * Disabled TAKE_IMP_DATA_VERSION because segfault with DBI < 1.607
+* #29528: bind_param(..., SQL_FLOAT) ignores exponents - fixed, Thanks to
+Tokuhiro Matsuno!
+* Cleanups to make mysqlEmb work under Cygwin - Thanks to Chris Rodgers  
+<http://rodgers.org.uk/> ! 
 
 2008-5-11 Patrick Galbraith <patg@patg.net> (4.007)
 
